FUNCTION(PREPEND_PATH var prefix)
    SET(listVar "")
    FOREACH(f ${ARGN})
        LIST(APPEND listVar "${prefix}/${f}")
    ENDFOREACH(f)
    SET(${var} "${listVar}" PARENT_SCOPE)
ENDFUNCTION(PREPEND_PATH)

SET(TARGET_ARCH x86)
SET(TARGET_PLATFORM ibm)

add_subdirectory(arch/${TARGET_ARCH})
include_directories(${ARCH_INCLUDE_DIR})
message("${ARCH_INCLUDE_DIR}")

add_subdirectory(boot)
add_subdirectory(kernel)

set(KERNEL_SRCS 
    ${ARCH_SRCS}
    ${BOOT_SRCS}
    ${KERNEL_SRCS})

# Include headers in sources
file(GLOB HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
source_group("include" FILES ${HEADERS})

add_executable(kernel.elf ${HEADERS} ${KERNEL_SRCS})

set(CMAKE_C_FLAGS ${ARCH_C_FLAGS})
set(CMAKE_CXX_FLAGS ${ARCH_CXX_FLAGS})
set(CMAKE_C_LINK_FLAGS ${ARCH_LINKER_FLAGS})
set(CMAKE_CXX_LINK_FLAGS ${ARCH_LINKER_FLAGS})
set(CMAKE_ASM_FLAGS ${ARCH_ASM_FLAGS})

SET(CMAKE_LINKER "/opt/cross/bin/i386-elf-ld")
SET(CMAKE_C_LINK_EXECUTABLE "<CMAKE_LINKER> <CMAKE_C_LINK_FLAGS> <OBJECTS> -o <TARGET> <LINK_LIBRARIES>")
SET(CMAKE_CXX_LINK_EXECUTABLE "<CMAKE_LINKER> <CMAKE_CXX_LINK_FLAGS> <OBJECTS> -o <TARGET> <LINK_LIBRARIES>")

SET(CMAKE_ASM_NASM_COMPILE_OBJECT "<CMAKE_ASM_NASM_COMPILER> ${CMAKE_ASM_FLAGS} -o <OBJECT> <SOURCE>")

set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BUILD_DIRECTORY})


set_target_properties(kernel.elf
    PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
)